WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152645
REGRESSION (
r194448
): Scrolling overflow:scroll goes too far
https://bugs.webkit.org/show_bug.cgi?id=152645
Summary
REGRESSION (r194448): Scrolling overflow:scroll goes too far
Simon Fraser (smfr)
Reported
2016-01-01 18:52:02 PST
Created
attachment 268078
[details]
Testcase Trackpad-scrolling the overflow:scroll in the test case causes it to scroll past the end.
Attachments
Testcase
(280 bytes, text/html)
2016-01-01 18:52 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(5.77 KB, patch)
2016-01-01 19:55 PST
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-01-01 19:26:33 PST
Result of a typo.
Simon Fraser (smfr)
Comment 2
2016-01-01 19:55:31 PST
Created
attachment 268080
[details]
Patch
Simon Fraser (smfr)
Comment 3
2016-01-01 20:44:49 PST
http://trac.webkit.org/changeset/194486
Michael Catanzaro
Comment 4
2016-06-19 17:23:12 PDT
This test is failing for GTK, see
bug #158917
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug