REGRESSION (r194448): Scrolling overflow:scroll goes too far https://bugs.webkit.org/show_bug.cgi?id=152645

Reviewed by Zalan Bujtas.

Source/WebCore:

Fix a bug introduced in r194448: use the scrollPosition, not the scrollOrigin
to compute the overhang amount.

Test: fast/scrolling/overflow-scroll-past-max.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::overhangAmount):

LayoutTests:

Test that scrolls and overflow div with wheel events, then checks that it has
not passed the max scroll offset.

* fast/scrolling/overflow-scroll-past-max-expected.txt: Added.
* fast/scrolling/overflow-scroll-past-max.html: Added.

Canonical link: https://commits.webkit.org/170724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194486 268f45cc-cd09-0410-ab3c-d52691b4dbfc